--- a/tinyPNG/package.json
+++ b/tinyPNG/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli-spinners": "^2.9.1",
+    "ora": "^7.0.1",
     "tinify": "^1.7.1"
   }
 }
