feat: rename pkgname

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tuco",
-  "version": "1.0.0",
+  "name": "tuco-cli",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "bin": {
