--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tuco-cli",
-  "version": "0.0.11",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "bin": {
     "tuco": "index.js",
-    "tuco-tp": "tinyPNG/index.js"
+    "ti-tp": "tinyPNG/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
